Queue container size requests while images are loading. https://bugs.webkit.org/show_bug.cgi?id=105097

Reviewed by Dean Jackson.

Source/WebCore:

We use CachedImage::setContainerSizeForRenderer(...) to notify images of requesting
container sizes. Unfortunately, if the image is not yet loaded we ignore this container
size information! This patch stores requesting container sizes made while the image is
not yet loaded.

This patch fixes a bug where SVG images would display incorrectly on the first load but
correctly thereafter. Additionally, this bug caused the SVGImageCache to not be used in many
real world scenarios.

This patch is loosely based on a patch by blambov in WK98403.

Test: http/tests/misc/svg-image-delayed-size-negotiation.html

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::didRemoveClient):
(WebCore::CachedImage::allClientsRemoved):
(WebCore::CachedImage::setContainerSizeForRenderer):
(WebCore::CachedImage::clear):
(WebCore::CachedImage::createImage):
* loader/cache/CachedImage.h:

    A new map has been added to track renderer -> size information before an image has
    loaded. Note that this affects all images (not just images that require container size
    information) but we cannot know the image type before the image has loaded.

LayoutTests:

I reused the embedded.svg and svg-slow.pl test files from a similar test for svg-as-object
size negotiation. svg-slow.pl simply delays the loading of the embedded.svg file.
Triggering this bug reliably using the local filesystem is too brittle.

* http/tests/misc/svg-image-delayed-size-negotiation-expected.html: Added.
* http/tests/misc/svg-image-delayed-size-negotiation.html: Added.


Canonical link: https://commits.webkit.org/123488@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137981 268f45cc-cd09-0410-ab3c-d52691b4dbfc