Source/WebCore/loader/cache/CachedImage.cpp
@@ -100,7 +100,10 @@ void CachedImage::didAddClient(CachedResourceClient* c)
 
 void CachedImage::didRemoveClient(CachedResourceClient* c)
 {
+    ASSERT(c);
     ASSERT(c->resourceClientType() == CachedImageClient::expectedType());
+
+    m_pendingContainerSizeRequests.remove(static_cast<CachedImageClient*>(c));
 #if ENABLE(SVG)
     if (m_svgImageCache)
         m_svgImageCache->removeClientFromCache(static_cast<CachedImageClient*>(c));
@@ -111,6 +114,7 @@ void CachedImage::didRemoveClient(CachedResourceClient* c)
 
 void CachedImage::allClientsRemoved()
 {
+    m_pendingContainerSizeRequests.clear();
     if (m_image && !errorOccurred())
         m_image->resetAnimation();
 }
@@ -184,10 +188,15 @@ Image* CachedImage::imageForRenderer(const RenderObject* renderer)
     return Image::nullImage();
 }
 
-void CachedImage::setContainerSizeForRenderer(const RenderObject* renderer, const IntSize& containerSize, float containerZoom)
+void CachedImage::setContainerSizeForRenderer(const CachedImageClient* renderer, const IntSize& containerSize, float containerZoom)
 {
-    if (!m_image || containerSize.isEmpty())
+    if (containerSize.isEmpty())
         return;
+    ASSERT(renderer);
+    if (!m_image) {
+        m_pendingContainerSizeRequests.set(renderer, SizeAndZoom(containerSize, containerZoom));
+        return;
+    }
 #if ENABLE(SVG)
     if (!m_image->isSVGImage()) {
         m_image->setContainerSize(containerSize);
@@ -196,7 +205,6 @@ void CachedImage::setContainerSizeForRenderer(const RenderObject* renderer, cons
 
     m_svgImageCache->setRequestedSizeAndScales(renderer, SVGImageCache::SizeAndScales(containerSize, containerZoom));
 #else
-    UNUSED_PARAM(renderer);
     UNUSED_PARAM(containerZoom);
     m_image->setContainerSize(containerSize);
 #endif
@@ -297,6 +305,7 @@ void CachedImage::clear()
     m_svgImageCache.clear();
 #endif
     clearImage();
+    m_pendingContainerSizeRequests.clear();
     setEncodedSize(0);
 }
 
@@ -306,20 +315,25 @@ inline void CachedImage::createImage()
     if (m_image)
         return;
 #if USE(CG) && !USE(WEBKIT_IMAGE_DECODERS)
-    if (m_response.mimeType() == "application/pdf") {
+    else if (m_response.mimeType() == "application/pdf")
         m_image = PDFDocumentImage::create();
-        return;
-    }
 #endif
 #if ENABLE(SVG)
-    if (m_response.mimeType() == "image/svg+xml") {
+    else if (m_response.mimeType() == "image/svg+xml") {
         RefPtr<SVGImage> svgImage = SVGImage::create(this);
         m_svgImageCache = SVGImageCache::create(svgImage.get());
         m_image = svgImage.release();
-        return;
     }
 #endif
-    m_image = BitmapImage::create(this);
+    else
+        m_image = BitmapImage::create(this);
+
+    // Send queued container size requests.
+    if (m_image && m_image->usesContainerSize()) {
+        for (ContainerSizeRequests::iterator it = m_pendingContainerSizeRequests.begin(); it != m_pendingContainerSizeRequests.end(); ++it)
+            setContainerSizeForRenderer(it->key, it->value.first, it->value.second);
+        m_pendingContainerSizeRequests.clear();
+    }
 }
 
 inline void CachedImage::clearImage()
